--- a/products.html
+++ b/products.html
@@ -48,13 +48,13 @@
           <li><img src="https://techacademy.s3.amazonaws.com/bootcamp/webdesign/shopping-site/download/products_img/pro_img_03.jpg" alt=""></li>
           <li><img src="https://techacademy.s3.amazonaws.com/bootcamp/webdesign/shopping-site/download/products_img/pro_img_04.jpg" alt=""></li>
           <li><img src="https://techacademy.s3.amazonaws.com/bootcamp/webdesign/shopping-site/download/products_img/pro_img_05.jpg" alt=""></li>
-          <li><img src="https://techacademy.s3.amazonaws.com/bootcamp/webdesign/shopping-site/download/products_gray_pro_img.jpg" alt=""></li>
-        　<li><img src="https://techacademy.s3.amazonaws.com/bootcamp/webdesign/shopping-site/download/products_gray_pro_img.jpg" alt=""></li>
-        　<li><img src="https://techacademy.s3.amazonaws.com/bootcamp/webdesign/shopping-site/download/products_gray_pro_img.jpg" alt=""></li>
-        　<li><img src="https://techacademy.s3.amazonaws.com/bootcamp/webdesign/shopping-site/download/products_gray_pro_img.jpg" alt=""></li>
-        　<li><img src="https://techacademy.s3.amazonaws.com/bootcamp/webdesign/shopping-site/download/products_gray_pro_img.jpg" alt=""></li>
+          <li><img src="./images/products/gray_pro_img.jpg" alt=""></li>
+        　<li><img src="./images/products/gray_pro_img.jpg" alt=""></li>
+        　<li><img src="./images/products/gray_pro_img.jpg" alt=""></li>
+        　<li><img src="./images/products/gray_pro_img.jpg" alt=""></li>
+        　<li><img src="./images/products/gray_pro_img.jpg" alt=""></li>
         </ul></div><hr>
-        <img src="images/products/title_color.png" class="mi"><br>
+        <img src="images/products/title_color.png" class="mi" alt=""><br>
         <table class="u-full-width option_tbl">
     <tr>
         <th>&nbsp;</th>
@@ -63,23 +63,24 @@
     </tr>
     <tr>
         <th class="bo">サイズ１</th>
-        <td class="bo">□</td>
-        <td class="bo">□</td>
+        <td class="bu">□</td>
+        <td class="bu">□</td>
     </tr>
 </table><div class="ho"><hr></div>
-        <img src="images/products/title_price.png"><p class="pink">￥1,000</p><p class="tax">(tax in)</p><br><img src="images/products/add_to_cart.png" class="add"><br><hr>
-        <img src="images/products/title_quantity.png"><input type="text" name="radio_original"><hr>
+        <div class="clearfix"><div class="haha"><div class="orange"><img src="images/products/title_price.png" alt=""><p class="pink">￥1,000</p><p class="tax">(tax in)</p></div><div class="red"><img src="images/products/title_quantity.png" alt=""><input type="text" name="radio_original"></div></div>
+        <div class="hah"><img src="images/products/add_to_cart.png" class="add" alt=""></div></div>
+        
         <p class="cha">商品説明</p><div class="hi"><hr></div>
         <p class="brown">■説明タイトル説明タイトル説明タイトル説明タイトル</p><br>
     <p class="black">説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明 テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキ スト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト</p>
     <table>
       <tr>
         <td class="tid">カラー</td>
-        <td>説明文が入ります説明文が入ります説明文が入ります説明文が入ります</td>
+        <td class="setu">説明文が入ります説明文が入ります説明文が入ります説明文が入ります</td>
       </tr>
       <tr>
         <td class="tid">サイズ</td>
-        <td>説明文が入ります</td>
+        <td class="setu">説明文が入ります</td>
       </tr>
     </table>
     </div>
