add git-logo image

--- a/products.html
+++ b/products.html
@@ -30,128 +30,141 @@
     <div id="header_in" class="container">
       <div class="row">
         <div class="six columns logo"> <a href="top.html"><img class="u-max-full-width" src="images/top/logo.png" alt="APPLE BERRY" srcset="images/top/logo@2x.png 2x" /></a> </div>
-        <div class="six columns gazou"> <a href="#" class="pad"><img class="u-max-full-width" src="images/top/menu_login.png" alt="#" srcset="images/top/menu_login@2x.png 2x" /></a> <a href="#" class="pad"><img class="u-max-full-width" src="images/top/menu_cart.png" alt="#" class="pad" srcset="images/top/menu_cart@2x.png 2x" /></a> <a href="#" class="pad"><img class="u-max-full-width" src="images/top/menu_mypage.png" alt="#" srcset="images/top/menu_mypage@2x.png 2x" /></a> <a href="#" class="pad"><img class="u-max-full-width" src="images/top/menu_guide.png" alt="#" srcset="images/top/menu_guide@2x.png 2x" /></a> <a href="#" class="pad"><img class="u-max-full-width" src="images/top/facebook.png" alt="#" srcset="images/top/facebook@2x.png 2x" /></a> <a href="#"><img class="u-max-full-width" src="images/top/insta.png" alt="#" srcset="images/top/insta@2x.png 2x" /></a> </div>
+        <div class="six columns gazou"> <a href="#"><img class="u-max-full-width" src="images/top/menu_login.png" alt="#" srcset="images/top/menu_login@2x.png 2x" /></a> <a href="#"><img class="u-max-full-width" src="images/top/menu_cart.png" alt="#" srcset="images/top/menu_cart@2x.png 2x" /></a> <a href="#"><img class="u-max-full-width" src="images/top/menu_mypage.png" alt="#" srcset="images/top/menu_mypage@2x.png 2x" /></a> <a href="#" class="pad"><img class="u-max-full-width" src="images/top/menu_guide.png" alt="#" srcset="images/top/menu_guide@2x.png 2x" /></a> <a href="#"><img class="u-max-full-width" src="images/top/facebook.png" alt="#" srcset="images/top/facebook@2x.png 2x" /></a> <a href="#"><img class="u-max-full-width" src="images/top/insta.png" alt="#" srcset="images/top/insta@2x.png 2x" /></a> </div>
       </div>
-    </div>
+      </div>
   </header>
   <div class="container">
     <div class="row">
       <main class="nine columns">
         <div class="home"><img src="images/list/home_icon.png" alt="#">HOME/カテゴリー名/商品名</div>
-        <div class="products_info_box">  
-        <p class="pname">商品名が入ります</p>
-        <p class="pcode">fa0001-91</p><br><hr>
-        <div class="au"><div id="display_img"> <img src="https://techacademy.s3.amazonaws.com/bootcamp/webdesign/shopping-site/download/products_img/pro_img_01.jpg" alt=""> </div>
-        <ul id="list_img">
-          <li><img src="https://techacademy.s3.amazonaws.com/bootcamp/webdesign/shopping-site/download/products_img/pro_img_01.jpg" alt=""></li>
-          <li><img src="https://techacademy.s3.amazonaws.com/bootcamp/webdesign/shopping-site/download/products_img/pro_img_02.jpg" alt=""></li>
-          <li><img src="https://techacademy.s3.amazonaws.com/bootcamp/webdesign/shopping-site/download/products_img/pro_img_03.jpg" alt=""></li>
-          <li><img src="https://techacademy.s3.amazonaws.com/bootcamp/webdesign/shopping-site/download/products_img/pro_img_04.jpg" alt=""></li>
-          <li><img src="https://techacademy.s3.amazonaws.com/bootcamp/webdesign/shopping-site/download/products_img/pro_img_05.jpg" alt=""></li>
-          <li><img src="./images/products/gray_pro_img.jpg" alt=""></li>
-        　<li><img src="./images/products/gray_pro_img.jpg" alt=""></li>
-        　<li><img src="./images/products/gray_pro_img.jpg" alt=""></li>
-        　<li><img src="./images/products/gray_pro_img.jpg" alt=""></li>
-        　<li><img src="./images/products/gray_pro_img.jpg" alt=""></li>
-        </ul></div><hr>
-        <img src="images/products/title_color.png" class="mi" alt=""><br>
-        <table class="u-full-width option_tbl">
-    <tr>
-        <th>&nbsp;</th>
-        <th class="bo">カラー１</th>
-        <th class="bo">カラー２</th>
-    </tr>
-    <tr>
-        <th class="bo">サイズ１</th>
-        <td class="bu">□</td>
-        <td class="bu">□</td>
-    </tr>
-</table><div class="ho"><hr></div>
-        <div class="clearfix"><div class="haha"><div class="orange"><img src="images/products/title_price.png" alt=""><p class="pink">￥1,000</p><p class="tax">(tax in)</p></div><div class="red"><img src="images/products/title_quantity.png" alt=""><input type="text" name="radio_original"></div></div>
-        <div class="hah"><img src="images/products/add_to_cart.png" class="add" alt=""></div></div>
-        
-        <p class="cha">商品説明</p><div class="hi"><hr></div>
-        <p class="brown">■説明タイトル説明タイトル説明タイトル説明タイトル</p><br>
-    <p class="black">説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明 テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキ スト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト</p>
-    <table>
-      <tr>
-        <td class="tid">カラー</td>
-        <td class="setu">説明文が入ります説明文が入ります説明文が入ります説明文が入ります</td>
-      </tr>
-      <tr>
-        <td class="tid">サイズ</td>
-        <td class="setu">説明文が入ります</td>
-      </tr>
-    </table>
-    </div>
-    <img src="images/list/recent_pro_pc.png" alt="#">
-    <div class="box-parent clearfix">
-        <div class="box"> <img src="images/top/item_07.jpg" alt="#">
-          <p class="name"> 商品名が入ります商品名が入ります<br> 商品名が入ります <br> ￥10,000 (tax in)</p>
+        <div class="products_info_box">
+          <p class="pname">商品名が入ります</p>
+          <p class="pcode">fa0001-91</p><br>
+          <hr>
+          <div class="au">
+            <div id="display_img"> <img src="https://techacademy.s3.amazonaws.com/bootcamp/webdesign/shopping-site/download/products_img/pro_img_01.jpg" alt=""> </div>
+            <ul id="list_img">
+              <li><img src="https://techacademy.s3.amazonaws.com/bootcamp/webdesign/shopping-site/download/products_img/pro_img_01.jpg" alt=""></li>
+              <li><img src="https://techacademy.s3.amazonaws.com/bootcamp/webdesign/shopping-site/download/products_img/pro_img_02.jpg" alt=""></li>
+              <li><img src="https://techacademy.s3.amazonaws.com/bootcamp/webdesign/shopping-site/download/products_img/pro_img_03.jpg" alt=""></li>
+              <li><img src="https://techacademy.s3.amazonaws.com/bootcamp/webdesign/shopping-site/download/products_img/pro_img_04.jpg" alt=""></li>
+              <li><img src="https://techacademy.s3.amazonaws.com/bootcamp/webdesign/shopping-site/download/products_img/pro_img_05.jpg" alt=""></li>
+              <li><img src="./images/products/gray_pro_img.jpg" alt=""></li>
+              <li><img src="./images/products/gray_pro_img.jpg" alt=""></li>
+              <li><img src="./images/products/gray_pro_img.jpg" alt=""></li>
+              <li><img src="./images/products/gray_pro_img.jpg" alt=""></li>
+              <li><img src="./images/products/gray_pro_img.jpg" alt=""></li>
+            </ul>
+          </div>
+          <hr> <img src="images/products/title_color.png" class="mi" alt=""><br>
+          <table class="u-full-width option_tbl">
+            <tr>
+              <th>&nbsp;</th>
+              <th class="bo">カラー１</th>
+              <th class="bo">カラー２</th>
+            </tr>
+            <tr>
+              <th class="bo">サイズ１</th>
+              <td class="bu">□</td>
+              <td class="bu">□</td>
+            </tr>
+          </table>
+          <div class="ho">
+            <hr>
+          </div>
+          <div class="clearfix">
+            <div class="haha">
+              <div class="orange"><img src="images/products/title_price.png" alt="">
+                <p class="pink">￥1,000</p>
+                <p class="tax">(tax in)</p>
+              </div>
+              <div class="red"><img src="images/products/title_quantity.png" alt=""><input type="text" name="radio_original"></div>
+            </div>
+            <div class="hah"><img src="images/products/add_to_cart.png" class="add" alt=""></div>
+          </div>
+          <p class="cha">商品説明</p>
+          <div class="hi">
+            <hr>
+          </div>
+          <p class="brown">■説明タイトル説明タイトル説明タイトル説明タイトル</p><br>
+          <p class="black">説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明 テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキ スト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト</p>
+          <table>
+            <tr>
+              <td class="tid">カラー</td>
+              <td class="setu">説明文が入ります説明文が入ります説明文が入ります説明文が入ります</td>
+            </tr>
+            <tr>
+              <td class="tid">サイズ</td>
+              <td class="setu">説明文が入ります</td>
+            </tr>
+          </table>
+        </div> <img src="images/list/recent_pro_pc.png" alt="#">
+        <div class="box-parent clearfix">
+          <div class="box"> <img src="images/top/item_07.jpg" alt="#">
+            <p class="name"> 商品名が入ります商品名が入ります<br> 商品名が入ります <br> ￥10,000 (tax in)</p>
+          </div>
+          <div class="box"> <img src="images/top/item_08.jpg" alt="#">
+            <p class="name"> 商品名が入ります商品名が入ります<br> 商品名が入ります <br> ￥10,000 (tax in)</p>
+          </div>
+          <div class="box"> <img src="images/top/item_09.jpg" alt="#">
+            <p class="name"> 商品名が入ります商品名が入ります<br> 商品名が入ります <br> ￥10,000 (tax in)</p>
+          </div>
         </div>
-        <div class="box"> <img src="images/top/item_08.jpg" alt="#">
-          <p class="name"> 商品名が入ります商品名が入ります<br> 商品名が入ります <br> ￥10,000 (tax in)</p>
+      </main>
+      <div class="aside three columns"> <img src="images/top/itemserch.png" alt="#">
+        <div class="search"><input type="search" name="s" placeholder="検索 …"><img src="images/top/search_icon.png" alt="#" class="megane"></div>
+        <div class="chairo"> <img src="images/top/pagelink.png" alt="#"></div>
+        <div class="chairo"> <img src="images/top/categories.png" alt="#"></div>
+        <div class="sen">
+          <p class="categori">カテゴリー名</p>
         </div>
-        <div class="box"> <img src="images/top/item_09.jpg" alt="#">
-          <p class="name"> 商品名が入ります商品名が入ります<br> 商品名が入ります <br> ￥10,000 (tax in)</p>
+        <div class="sen">
+          <p class="categori">カテゴリー名</p>
         </div>
+        <div class="sen">
+          <p class="categori">カテゴリー名</p>
         </div>
-        </main>
-    <div class="aside three columns"> <img src="images/top/itemserch.png" alt="#">
-      <div class="search"><input type="search" name="s" placeholder="検索 …"><img src="images/top/search_icon.png" alt="#" class="megane"></div>
-      <div class="chairo"> <img src="images/top/pagelink.png" alt="#"></div>
-      <div class="chairo"> <img src="images/top/categories.png" alt="#"></div>
-      <div class="sen">
-        <p class="categori">カテゴリー名</p>
+        <div class="sen">
+          <p class="categori">カテゴリー名</p>
+        </div>
+        <div class="sen">
+          <p class="categori">カテゴリー名</p>
+        </div>
+        <div class="sen">
+          <p class="categori">カテゴリー名</p>
+        </div>
+        <div class="chairo"> <img src="images/top/about.png" alt="#"> </div>
+        <div class="move"><img src="images/top/about_img.jpg" alt="#"></div>
+        <div class="name">お店の説明お店の説明お店の説明が入ります</div>
+        <div class="morechairo"> <img src="images/top/more_btn.png" alt="#" class="example1"> </div>
+        <div class="chairo"><img src="images/top/shop_info.png" alt="#" class="inn"> </div>
+        <div class="move"><img src="images/top/shopinfo_img.jpg" alt="#"></div>
+        <div class="name">お店の説明お店の説明お店の説明が入りますお店の説明お店の説明お店の説明</div>
+        <div class="morechairo"> <img src="images/top/more_btn.png" alt="#" class="example1"> </div>
+      </div></div> <img src="images/top/title_guide.png" alt="#">
+    <div class="row">
+      <div class="pay six columns">
+        <p class="otodoke">お届けについて</p> <img src="images/top/otodoke_banner.png" alt="#">
+        <p class="otodoke">■〇〇運輸</p>
+        <p class="souryou">送料 ￥000円</p>
+        <p class="otodoke">■ゆうパケット</p>
+        <p class="souryou">ポスト投函となります。日時指定不可</p>
       </div>
-      <div class="sen">
-        <p class="categori">カテゴリー名</p>
+      <div class="kessai six columns">
+        <p class="otodoke">決済について</p>
+        <p class="otodoke">■カート決済</p> <img src="images/top/cards.png" alt="#">
+        <p class="otodoke">■代金引換</p>
+        <p class="souryou">代引き手数料が別途かかります。</p>
+        <p class="otodoke">■銀行振込</p>
+        <p class="souryou">お振込み手数料お客様負担。<br> ご入金後の発送となります。 </p>
       </div>
-      <div class="sen">
-        <p class="categori">カテゴリー名</p>
-      </div>
-      <div class="sen">
-        <p class="categori">カテゴリー名</p>
-      </div>
-      <div class="sen">
-        <p class="categori">カテゴリー名</p>
-      </div>
-      <div class="sen">
-        <p class="categori">カテゴリー名</p>
-      </div>
-      <div class="chairo"> <img src="images/top/about.png" alt="#"> </div>
-      <div class="move"><img src="images/top/about_img.jpg" alt="#"></div>
-      <div class="name">お店の説明お店の説明お店の説明が入ります</div>
-      <div class="morechairo"> <img src="images/top/more_btn.png" alt="#" class="example1"> </div> 
-      <div class="chairo"><img src="images/top/shop_info.png" alt="#" class="inn"> </div>
-      <div class="move"><img src="images/top/shopinfo_img.jpg" alt="#"></div>
-      <div class="name">お店の説明お店の説明お店の説明が入りますお店の説明お店の説明お店の説明</div>
-      <div class="morechairo"> <img src="images/top/more_btn.png" alt="#" class="example1"> </div>
     </div>
-     　</div>
-   <img src="images/top/title_guide.png" alt="#">
-  <div class="row">
-    <div class="pay six columns">
-      <p class="otodoke">お届けについて</p> <img src="images/top/otodoke_banner.png" alt="#">
-      <p class="otodoke">■〇〇運輸</p>
-      <p class="souryou">送料 ￥000円</p>
-      <p class="otodoke">■ゆうパケット</p>
-      <p class="souryou">ポスト投函となります。日時指定不可</p>
-    </div>
-    <div class="kessai six columns">
-      <p class="otodoke">決済について</p>
-      <p class="otodoke">■カート決済</p> <img src="images/top/cards.png" alt="#">
-      <p class="otodoke">■代金引換</p>
-      <p class="souryou">代引き手数料が別途かかります。</p>
-      <p class="otodoke">■銀行振込</p>
-      <p class="souryou">お振込み手数料お客様負担。<br> ご入金後の発送となります。 </p>
-    </div>
-  </div>
   </div>
   <footer>
     <div class="migisita"><img src="images/top/pagetop.png" alt="#"></div>
     <hr>
-    <div class="name1">特定商取引に基づく表記　・　プライバシーポリシー　・　マイページ</div><br>
+    <div class="name1">特定商取引に基づく表記・プライバシーポリシー・マイページ</div><br>
     <div class="copyright">copyright (C) APPLE BERRY all rights reserved.</div>
   </footer>
 </body>
