--- a/list.html
+++ b/list.html
@@ -19,9 +19,9 @@
 <body>
     <header>
       <div id="header_in" class="container">
-      <div class="row">
+       <div class="row">
         <div class="six columns logo"> <a href="top.html"><img class="u-max-full-width" src="images/top/logo.png" alt="APPLE BERRY" srcset="images/top/logo@2x.png 2x" /></a> </div>
-        <div class="six columns gazou"> <a href="#" class="pad"><img class="u-max-full-width" src="images/top/menu_login.png" alt="#" srcset="images/top/menu_login@2x.png 2x" /></a> <a href="#" class="pad"><img class="u-max-full-width" src="images/top/menu_cart.png" alt="#" class="pad" srcset="images/top/menu_cart@2x.png 2x" /></a> <a href="#" class="pad"><img class="u-max-full-width" src="images/top/menu_mypage.png" alt="#" srcset="images/top/menu_mypage@2x.png 2x" /></a> <a href="#" class="pad"><img class="u-max-full-width" src="images/top/menu_guide.png" alt="#" srcset="images/top/menu_guide@2x.png 2x" /></a> <a href="#" class="pad"><img class="u-max-full-width" src="images/top/facebook.png" alt="#" srcset="images/top/facebook@2x.png 2x" /></a> <a href="#"><img class="u-max-full-width" src="images/top/insta.png" alt="#" srcset="images/top/insta@2x.png 2x" /></a> </div>
+        <div class="six columns gazou"> <a href="#"><img class="u-max-full-width" src="images/top/menu_login.png" alt="#" srcset="images/top/menu_login@2x.png 2x" /></a> <a href="#"><img class="u-max-full-width" src="images/top/menu_cart.png" alt="#" srcset="images/top/menu_cart@2x.png 2x" /></a> <a href="#"><img class="u-max-full-width" src="images/top/menu_mypage.png" alt="#" srcset="images/top/menu_mypage@2x.png 2x" /></a> <a href="#" class="pad"><img class="u-max-full-width" src="images/top/menu_guide.png" alt="#" srcset="images/top/menu_guide@2x.png 2x" /></a> <a href="#"><img class="u-max-full-width" src="images/top/facebook.png" alt="#" srcset="images/top/facebook@2x.png 2x" /></a> <a href="#"><img class="u-max-full-width" src="images/top/insta.png" alt="#" srcset="images/top/insta@2x.png 2x" /></a> </div>
       </div>
     </div>
     </header>
@@ -29,8 +29,8 @@
     <div class="row">
       <main class="nine columns">
         <div class="owl-carousel owl-theme"> <img src="images/list/cate_image_sp.jpg" alt="#"> </div>
-        <div class="home"><img src="images/list/home_icon.png">HOME/カテゴリー名/商品名</div>
-        <img src="images/top/title_newitems.png">
+        <div class="home"><img src="images/list/home_icon.png" alt="#">HOME/カテゴリー名/商品名</div>
+        <img src="images/top/title_newitems.png" alt="#">
         <div class="box-parent clearfix">
         <div class="box"><img src="images/top/item_01.jpg" alt="#">
           <p class="name"> 商品名が入ります商品名が入ります<br> 商品名が入ります <br> ￥10,000 (tax in)</p>
@@ -67,7 +67,7 @@
         <div class="hidari"><p class="sikaku">BACK</p></div>
         <div class="migi"><p class="sikaku">NEXT</p></div>
         </div>
-        <img src="images/list/recent_pro_pc.png">
+        <img src="images/list/recent_pro_pc.png" alt="#">
         <div class="box-parent clearfix">
         <div class="box"> <img src="images/top/item_10.jpg" alt="#">
           <p class="name"> 商品名が入ります商品名が入ります<br> 商品名が入ります <br> ￥10,000 (tax in)</p>
@@ -92,7 +92,7 @@
         <div class="chairo"> <img src="images/top/about.png" alt="#"> </div> <div class="move"><img src="images/top/about_img.jpg" alt="#"></div>
         <div class="name">お店の説明お店の説明お店の説明が入ります</div>
         <div class="morechairo"> <img src="images/top/more_btn.png" alt="#" class="example1"> </div>
-      　<div class="chairo"><img src="images/top/shop_info.png" alt="#" class="inn" > </div><div class="move"><img src="images/top/shopinfo_img.jpg" alt="#"></div>
+      <div class="chairo"><img src="images/top/shop_info.png" alt="#" class="inn" > </div><div class="move"><img src="images/top/shopinfo_img.jpg" alt="#"></div>
         <div class="name">お店の説明お店の説明お店の説明が入りますお店の説明お店の説明お店の説明</div>
         <div class="morechairo"> <img src="images/top/more_btn.png" alt="#" class="example1"> </div>
       </div>
@@ -118,7 +118,7 @@
   </div>
   <footer> 
   <div class="migisita"><img src="images/top/pagetop.png" alt="#"></div><hr>
-   <div class="name1">特定商取引に基づく表記　・　プライバシーポリシー　・　マイページ</div><br>
+   <div class="name1">特定商取引に基づく表記・プライバシーポリシー・マイページ</div><br>
   <div class="copyright">copyright (C) APPLE BERRY all rights reserved.</div>
   </footer>
 </body>
