--- a/top.html
+++ b/top.html
@@ -12,11 +12,11 @@
  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/skeleton.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="owlcarousel/assets/owl.carousel.min.css">
   <link rel="stylesheet" href="owlcarousel/assets/owl.theme.default.min.css">
+  <link rel="stylesheet" href="css/style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="owlcarousel/owl.carousel.min.js"></script>
   <script src="owlcarousel/assets/test-carousel.js"></script>
@@ -24,17 +24,22 @@
 <body>
   <header>
     <div id="header_in" class="container">
-      <div class="row">
+       <div class="row">
         <div class="six columns logo"> <a href="top.html"><img class="u-max-full-width" src="images/top/logo.png" alt="APPLE BERRY" srcset="images/top/logo@2x.png 2x" /></a> </div>
-        <div class="six columns gazou"> <a href="#" class="pad"><img class="u-max-full-width" src="images/top/menu_login.png" alt="#" srcset="images/top/menu_login@2x.png 2x" /></a> <a href="#" class="pad"><img class="u-max-full-width" src="images/top/menu_cart.png" alt="#" class="pad" srcset="images/top/menu_cart@2x.png 2x" /></a> <a href="#" class="pad"><img class="u-max-full-width" src="images/top/menu_mypage.png" alt="#" srcset="images/top/menu_mypage@2x.png 2x" /></a> <a href="#" class="pad"><img class="u-max-full-width" src="images/top/menu_guide.png" alt="#" srcset="images/top/menu_guide@2x.png 2x" /></a> <a href="#" class="pad"><img class="u-max-full-width" src="images/top/facebook.png" alt="#" srcset="images/top/facebook@2x.png 2x" /></a> <a href="#"><img class="u-max-full-width" src="images/top/insta.png" alt="#" srcset="images/top/insta@2x.png 2x" /></a> </div>
+        <div class="six columns gazou"> <a href="#"><img class="u-max-full-width" src="images/top/menu_login.png" alt="#" srcset="images/top/menu_login@2x.png 2x" /></a> <a href="#"><img class="u-max-full-width" src="images/top/menu_cart.png" alt="#" srcset="images/top/menu_cart@2x.png 2x" /></a> <a href="#"><img class="u-max-full-width" src="images/top/menu_mypage.png" alt="#" srcset="images/top/menu_mypage@2x.png 2x" /></a> <a href="#" class="pad"><img class="u-max-full-width" src="images/top/menu_guide.png" alt="#" srcset="images/top/menu_guide@2x.png 2x" /></a> <a href="#"><img class="u-max-full-width" src="images/top/facebook.png" alt="#" srcset="images/top/facebook@2x.png 2x" /></a> <a href="#"><img class="u-max-full-width" src="images/top/insta.png" alt="#" srcset="images/top/insta@2x.png 2x" /></a> </div>
       </div>
     </div>
   </header>
   <div class="container">
     <div class="row">
       <main class="nine columns">
-        <div class="owl-carousel owl-theme"> <img src="images/top/ca_banner.jpg" alt="#"> </div>
-        <img src="images/top/title_newitems.png">
+        <div class="owl-carousel owl-theme">
+          <div><img src="images/top/ca_banner.jpg" alt="#"></div>
+          <div><img src="images/top/ca_banner.jpg" alt="#"></div>
+          <div><img src="images/top/ca_banner.jpg" alt="#"></div>
+          <div><img src="images/top/ca_banner.jpg" alt="#"></div>
+          </div>
+          <img src="images/top/title_newitems.png" alt="#">
         <div class="box"><img src="images/top/item_01.jpg" alt="#">
           <p class="name"> 商品名が入ります商品名が入ります<br> 商品名が入ります <br> ￥10,000 (tax in)</p>
         </div>
@@ -73,7 +78,7 @@
           <p class="name"> 商品名が入ります商品名が入ります<br> 商品名が入ります <br> ￥10,000 (tax in)</p>
         </div>
       </main> 
-      <div class="aside three columns"> <img src="images/top/itemserch.png" alt="#"> <div class="search"><input type="search" name="s" placeholder="検索 …"><img src="images/top/search_icon.png" alt="#" class="megane"></div>
+      <div class="aside three columns"><div class="wh_bg_box"><img src="images/top/itemserch.png" alt="#"><input type="text" name="s" placeholder="…" id="searchInput"></div>
         <div class="chairo"> <img src="images/top/pagelink.png" alt="#"></div>
         <div class="chairo"> <img src="images/top/categories.png" alt="#"></div>
         <div class="sen"><p class="categori">カテゴリー名</p></div>
@@ -82,12 +87,12 @@
         <div class="sen"><p class="categori">カテゴリー名</p></div>
         <div class="sen"><p class="categori">カテゴリー名</p></div>
         <div class="sen"><p class="categori">カテゴリー名</p></div>
-        <div class="chairo"> <img src="images/top/about.png" alt="#"> </div> <div class="move"><img src="images/top/about_img.jpg" alt="#"></div>
+        <div class="chairo"><img src="images/top/about.png" alt="#"> </div> <div class="move"><div class="aaa"><img src="images/top/about_img.jpg" alt="#"></div>
         <div class="name">お店の説明お店の説明お店の説明が入ります</div>
-        <div class="morechairo"> <img src="images/top/more_btn.png" alt="#" class="example1"> </div>
-      　<div class="chairo"><img src="images/top/shop_info.png" alt="#" class="inn" > </div><div class="move"><img src="images/top/shopinfo_img.jpg" alt="#"></div>
+        <div class="morechairo"> <img src="images/top/more_btn.png" alt="#" class="example1"> </div></div>
+      <div class="chairo"><img src="images/top/shop_info.png" alt="#" class="inn" > </div><div class="move"><div class="aaa"><img src="images/top/shopinfo_img.jpg" alt="#"></div>
         <div class="name">お店の説明お店の説明お店の説明が入りますお店の説明お店の説明お店の説明</div>
-        <div class="morechairo"> <img src="images/top/more_btn.png" alt="#" class="example1"> </div>
+        <div class="morechairo"> <img src="images/top/more_btn.png" alt="#" class="example1"> </div></div>
       </div>
     </div>
     <img src="images/top/title_guide.png" alt="#">
@@ -111,7 +116,7 @@
   </div>
   <footer> 
   <div class="migisita"><img src="images/top/pagetop.png" alt="#"></div><hr>
-   <div class="name1">特定商取引に基づく表記　・　プライバシーポリシー　・　マイページ</div><br>
+   <div class="name1">特定商取引に基づく表記・プライバシーポリシー・マイページ</div><br>
   <div class="copyright">copyright (C) APPLE BERRY all rights reserved.</div>
   </footer>
 </body>
